--- a/heaterController/src/main/res/values/strings.xml
+++ b/heaterController/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">My ApplicationTest</string>
+    <string name="app_name">Heater Controller</string>
 </resources>
